@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[97] --> Fixed a crash with npc_boneguard_mounted script. (Thx fiveofeight)
 [96] --> Fix Isle of Conquest - Teleports.
 [95] --> Fix Halion.
 [94] --> Fix Normal and Glyph of Eternal Water - Water Elemental.
@@ -153,5 +154,6 @@
 #            https://github.com/tibbi                                                      #
 #            https://github.com/locksmith                                                  #
 #            https://github.com/Thainification                                             #
+#            https://github.com/fiveofeight                                                #
 #                                                                                          #
 ############################################################################################
